[IMP] 将serviceConfig重命名为config

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,18 +1,18 @@
 error.format.type=配置类型应为yml或properties
-error.serviceConfigDO.query=配置查询失败
-error.serviceConfigDO.create=配置创建失败
-error.serviceConfigDO.info.update=配置信息更新失败
-error.serviceConfigDO.query.serviceNameNotFound=配置信息获取失败，服务名不存在
-error.serviceConfigDO.query.serviceNameOrConfigVersionNotFound=配置信息获取失败，服务名活配置版本不存在
-error.serviceConfigDO.update=配置更新失败
-error.serviceConfigDO.not.exist=配置不存在
-error.serviceConfigDO.item.add=配置项添加失败
-error.serviceConfigDO.item.update=配置项修改失败
-error.serviceConfigDO.item.exist=配置项已存在
-error.serviceConfigDO.item.not.exist=配置项不存在
+error.configDO.query=配置查询失败
+error.configDO.create=配置创建失败
+error.configDO.info.update=配置信息更新失败
+error.configDO.query.serviceNameNotFound=配置信息获取失败，服务名不存在
+error.configDO.query.serviceNameOrConfigVersionNotFound=配置信息获取失败，服务名活配置版本不存在
+error.configDO.update=配置更新失败
+error.configDO.not.exist=配置不存在
+error.configDO.item.add=配置项添加失败
+error.configDO.item.update=配置项修改失败
+error.configDO.item.exist=配置项已存在
+error.configDO.item.not.exist=配置项不存在
 error.label.serviceName.query=服务的标签查询失败
 error.label.not.exist=label不存在
-error.serviceConfigDO.parser=配置解析出错
+error.configDO.parser=配置解析出错
 error.serviceName.not.exist=服务不存在
 error.routeDO.query=路由查询错误
 error.routeDO.create=路由创建失败
