[IMP] 修改了更新实例的配置接口

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -16,6 +16,7 @@ error.config.item.not.exist=配置项不存在
 error.label.serviceName.query=服务的标签查询失败
 error.label.not.exist=label不存在
 error.config.parser=配置解析出错
+error.config.txt=配置文本不合法
 error.serviceName.not.exist=服务不存在
 error.route.query=路由查询错误
 error.route.create=路由创建失败
