[IMP] 修改了创建配置的接口；添加了获取配置的yaml格式接口

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -2,10 +2,13 @@ error.format.type=配置类型应为yml或properties
 error.config.query=配置查询失败
 error.config.create=配置创建失败
 error.config.name.empty=配置名称为空
+error.config.version.empty=配置版本为空
+error.config.serviceName.empty=配置服务名为空
 error.config.serviceId.null=服务id为空
 error.config.info.update=配置信息更新失败
-error.config.query.serviceNameNotFound=配置信息获取失败，服务名不存在
-error.config.query.serviceNameOrConfigVersionNotFound=配置信息获取失败，服务名活配置版本不存在
+error.config.yaml.null=配置yaml内容为空
+error.config.yml=配置yaml不合法
+error.config.serviceName.notExist=配置服务名不存在
 error.config.update=配置更新失败
 error.config.not.exist=配置不存在
 error.config.item.add=配置项添加失败
