[IMP] 修改路由刷新逻辑

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -13,6 +13,7 @@ error.config.update=配置更新失败
 error.config.not.exist=配置不存在
 error.config.item.add=配置项添加失败
 error.config.item.update=配置项修改失败
+error.config.service.not.exist=配置的服务不存在
 error.config.item.exist=配置项已存在
 error.config.delete.default=默认配置不允许删除
 error.config.item.not.exist=配置项不存在
