[ADD] 添加了配置的校验接口；修复了网关配置更新异常

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -9,19 +9,19 @@ error.config.info.update=配置信息更新失败
 error.config.yaml.null=配置yaml内容为空
 error.config.yml=配置yaml不合法
 error.config.serviceName.notExist=配置服务名不存在
+error.config.serviceId.notExist=配置服务id不存在
 error.config.update=配置更新失败
 error.config.not.exist=配置不存在
 error.config.item.add=配置项添加失败
 error.config.item.update=配置项修改失败
 error.config.service.not.exist=配置的服务不存在
-error.config.item.exist=配置项已存在
+error.config.insert.versionDuplicate=配置版本已存在
+error.config.insert.nameDuplicate=配置名已存在
 error.config.delete.default=默认配置不允许删除
 error.config.item.not.exist=配置项不存在
 error.label.serviceName.query=服务的标签查询失败
-error.label.not.exist=label不存在
 error.config.parser=配置解析出错
 error.config.txt=配置文本不合法
-error.serviceName.not.exist=服务不存在
 error.route.query=路由查询错误
 error.route.create=路由创建失败
 error.route.update=路由更新失败
