[IMP] 修改查看实例详情页面的返回值

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -30,3 +30,6 @@ error.route.insert.nameDuplicate=路由名称重复
 error.route.insert.pathDuplicate=路由路径重复
 error.objectVersionNumber.empty=objectVersionNumber为空
 error.service.notExist=服务不存在，服务id为： {0}
+error.illegal.management.url=管理端口url不合法
+error.restTemplate.fetchEnvInfo=restTemplate获取环境信息失败
+error.parse.envJson=解析环境信息json失败
