--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -33,3 +33,6 @@ error.service.notExist=服务不存在，服务id为： {0}
 error.illegal.management.url=管理端口url不合法
 error.restTemplate.fetchEnvInfo=restTemplate获取环境信息失败
 error.parse.envJson=解析环境信息json失败
+error.service.not.run=版本为{1}的服务{0}没有运行
+error.service.swaggerJson.empty=服务swaggerJson为空
+error.parseJson=解析json数据失败
