[FIX] 修复实例详情查不到数据的问题

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -36,3 +36,4 @@ error.parse.envJson=解析环境信息json失败
 error.service.not.run=版本为{1}的服务{0}没有运行
 error.service.swaggerJson.empty=服务swaggerJson为空
 error.parseJson=解析json数据失败
+error.illegal.instanceId=不合法的instanceId，格式为serviceName:ipAddress:port
