[IMP] 配置管理更新了所有配置的显示

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -21,6 +21,7 @@ error.config.item.not.exist=配置项不存在
 error.label.serviceName.query=服务的标签查询失败
 error.config.parser=配置解析出错
 error.config.txt=配置文本不合法
+error.config.fetchEnv=无法获取该服务的配置信息
 error.route.query=路由查询错误
 error.route.create=路由创建失败
 error.route.update=路由更新失败
