--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -37,3 +37,4 @@ error.service.not.run=版本为{1}的服务{0}没有运行
 error.service.swaggerJson.empty=服务swaggerJson为空
 error.parseJson=解析json数据失败
 error.illegal.instanceId=不合法的instanceId，格式为serviceName:ipAddress:port
+error.controller.not.found=找不到{0}的controller
