[ADD]添加路由规则相关接口

--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -43,3 +43,14 @@ error.controller.not.found=找不到{0}的controller
 error.date.format=日期格式不正确，请使用yyyy-MM-dd格式
 error.date.parse=日期格式解析异常，startDate {0} endDate {1}
 error.date.order=日期的顺序不正确，开始日期大于结束日期
+
+# route_rule
+error.route.rule.insert=路由规则信息插入失败
+error.route.rule.update=路由规则信息更新失败
+error.route.rule.delete=路由规则信息删除失败
+error.route.rule.code.can.not.be.empty=路由规则code不能为空
+error.route.rule.update.id.can.not.be.null=更新路由ID不能为空
+error.route.rule.code.format.incorrect=路由编码只能由 字母（大小写）、数字、-、_、.、空格构成且长度不高于30位
+error.route.rule.description.format.incorrect= 路由描述长度最大200字符
+# route member rule
+error.route.member.rule.user.id.can.not.be.null=路由配置用户， 用户ID不能为空
