--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -45,12 +45,17 @@ error.date.parse=日期格式解析异常，startDate {0} endDate {1}
 error.date.order=日期的顺序不正确，开始日期大于结束日期
 
 # route_rule
+error.route.rule.query.fail=路由规则详情查询失败
 error.route.rule.insert=路由规则信息插入失败
 error.route.rule.update=路由规则信息更新失败
 error.route.rule.delete=路由规则信息删除失败
 error.route.rule.code.can.not.be.empty=路由规则code不能为空
+error.route.rule.code.check.fail=路由编码校验失败
 error.route.rule.update.id.can.not.be.null=更新路由ID不能为空
 error.route.rule.code.format.incorrect=路由编码只能由 字母（大小写）、数字、-、_、.、空格构成且长度不高于30位
 error.route.rule.description.format.incorrect= 路由描述长度最大200字符
 # route member rule
 error.route.member.rule.user.id.can.not.be.null=路由配置用户， 用户ID不能为空
+
+# base feign client
+error.base.service.feign.execute.fail=base服务feign调用失败
