[IMP]修改路由更新接口

--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -54,6 +54,7 @@ error.route.rule.code.check.fail=路由编码校验失败
 error.route.rule.update.id.can.not.be.null=更新路由ID不能为空
 error.route.rule.code.format.incorrect=路由编码只能由 字母（大小写）、数字、-、_、.、空格构成且长度不高于30位
 error.route.rule.description.format.incorrect= 路由描述长度最大200字符
+error.route.rule.update.object.version.number.cannot.be.null=更新路由 版本号不能为空
 # route member rule
 error.route.member.rule.user.id.can.not.be.null=路由配置用户， 用户ID不能为空
 
