--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -51,7 +51,7 @@ error.route.rule.update=路由规则信息更新失败
 error.route.rule.delete=路由规则信息删除失败
 error.route.rule.code.can.not.be.empty=路由规则code不能为空
 error.route.rule.update.id.can.not.be.null=更新路由ID不能为空
-error.route.rule.code.format.incorrect=路由编码只能由 字母（大小写）、数字、-、_、.、空格构成且长度不高于30位
+error.route.rule.code.format.incorrect=路由编码只能由字母大小写、数字、"_"、"."、"-"、空格组成且限制30字符
 error.route.rule.description.format.incorrect= 路由描述长度最大200字符
 error.route.rule.update.object.version.number.cannot.be.null=更新路由 版本号不能为空
 # route member rule
