--- a/src/main/resources/messages/messages_zh_CN.properties
+++ b/src/main/resources/messages/messages_zh_CN.properties
@@ -54,5 +54,6 @@ error.route.rule.update.id.can.not.be.null=更新路由ID不能为空
 error.route.rule.code.format.incorrect=路由编码只能由字母大小写、数字、"_"、"."、"-"、空格组成且限制30字符
 error.route.rule.description.format.incorrect= 路由描述长度最大200字符
 error.route.rule.update.object.version.number.cannot.be.null=更新路由 版本号不能为空
+error.route.rule.check.fail=路由规则校验失败(服务调用失败)
 # route member rule
 error.route.member.rule.user.id.can.not.be.null=路由配置用户， 用户ID不能为空
